Finally make the questionbox that asks you whether to lose chars or to change encoding work correctly.

BUG: 149309 
BUG: 145163.

svn path=/trunk/KDE/kdepim/; revision=886302