kmcomposereditor.h
@@ -52,6 +52,12 @@ class KMComposerEditor : public KMeditor
      */
     void setQuotePrefixName( const QString &quotePrefix );
 
+    /**
+     * This replaces all characters not known to the specified codec with
+     * questionmarks. HTML formatting is preserved.
+     */
+    void replaceUnknownChars( const QTextCodec *codec );
+
     virtual QString smartQuote( const QString & msg );
     virtual void changeHighlighterColors(KPIM::KEMailQuotingHighlighter * highlighter);
 
